fixing image issue

--- a/content/post/2021-07-22-gcp-vs-aws-01.md
+++ b/content/post/2021-07-22-gcp-vs-aws-01.md
@@ -6,7 +6,7 @@ date:        2021-07-22
 author:      ""
 image:       ""
 tags:        ["Cloud", "AWS", "GCP"]
-categories:  ["Tech" ]
+categories:  ["Cloud" ]
 published: false
 ---
 
