fix image display issue

--- a/content/post/2023-03-25-vault-on-k8s.md
+++ b/content/post/2023-03-25-vault-on-k8s.md
@@ -255,7 +255,7 @@ kubectl exec -n $VAULT_K8S_NAMESPACE vault-0 -- vault operator init \
 > number of key shares required to unseal Vault -key-threshold=2.  
 > 2. For production HA, better to set the key-shares & key-threshold bit larger than 1 to fit for your security needs.
 I will set the key-shares as 5 and key-threshold=2 for later demo.
-<img src='/img/2023-03-25-vault-on-k8s/vault-init-01' style="height: 931px;margin-left: 0px;"/>
+<img src='/img/2023-03-25-vault-on-k8s/vault-init-01.jpg' style="height: 420px;margin-left: 0px;"/>
 5. Create a variable named VAULT_UNSEAL_KEY to capture the Vault unseal key  
 randomly pick up two from these 5 shares.
 ```shell
@@ -405,13 +405,13 @@ EOF
 k apply -f ${WORKDIR}/vault-ingress.yaml
 ```
 4. Verify the ingress.
-<img src='/img/2023-03-25-vault-on-k8s/vault-ui-01' style="height: 1124px;margin-left: 0px;"/>
+<img src='/img/2023-03-25-vault-on-k8s/vault-ui-01.jpg' style="height: 300px;margin-left: 0px;"/>
 
 Use root token to login
-<img src='/img/2023-03-25-vault-on-k8s/vault-ui-02' style="height: 1124px;margin-left: 0px;"/>
+<img src='/img/2023-03-25-vault-on-k8s/vault-ui-02.jpg' style="height: 240px;margin-left: 0px;"/>
 
-# Next
-Ends here, will continue the kubernetes engine enablement and vault inject agent in next blog.s
+# Continue
+Ends here, will continue the kubernetes engine enablement and vault inject agent in next blog.
 
 Reference docs:  
 https://developer.hashicorp.com/vault/tutorials/kubernetes/kubernetes-minikube-tls
