fix compile issue using a newer version of hugo

--- a/content/post/2021-07-22-gcp-vs-aws-01.md
+++ b/content/post/2021-07-22-gcp-vs-aws-01.md
@@ -2,18 +2,15 @@
 title:       "Cloud Service - AWS & GCP"
 subtitle:    "Machine instance types"
 description: "list the difference instance types for reference."
-date:        2021-07-22
-author:      ""
-image:       ""
+date:        "2021-07-22"
+author:      "Jamie Zhang"
+image:       "/img/background-02.jpg"
 tags:        ["Cloud", "AWS", "GCP"]
-categories:  ["Cloud" ]
-published: false
+categories:  [ Cloud ]
+draft: true
 ---
 
 # Instance types
 | Types | AWS | GCP | Remark |
 | :---  | :---- |  :--- | :--- |
 | Standard/General|Medium, e.g. db.m1.small|Standard, eg.n1-standard-1| |
-E78A48
-
-
