--- a/content/post/2023-03-25-vault-on-k8s.md
+++ b/content/post/2023-03-25-vault-on-k8s.md
@@ -2,7 +2,7 @@
 title:       "Vault on Kubernetes"
 subtitle:    "Install Vault on K8S with integrated storage via Helm"
 description: "To setup a HA Vault Cluster in Kubernetes"
-date:        2023-03-25
+date:        "2023-03-25"
 author:      "Jamie"
 image:       "/img/background-01.jpg"
 tags:        ["Vault", "Kubernetes"]
