--- a/content/post/2023-05-29-k8s-cka.md
+++ b/content/post/2023-05-29-k8s-cka.md
@@ -2,9 +2,9 @@
 title:       "CKA & important operation commands"
 subtitle:    "Passed CKA exam last Sat, would like to summarize the useful commands for future reference."
 description: ""
-date:        2023-05-29
+date:        "2023-05-29"
 author:      "Jamie Zhang"
-image:       "img/background-10.jpg"
+image:       "/img/background-10.jpg"
 tags:        ["Kubernetes"]
 categories:  ["Cloud" ]
 ---
