fix layout bugs

--- a/content/post/2021-07-22-gcp-vs-aws-01.md
+++ b/content/post/2021-07-22-gcp-vs-aws-01.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title:       "Cloud Service - AWS & GCP"
 subtitle:    "Machine instance types"
 description: "list the difference instance types for reference."
