--- a/content/post/2023-03-25-vault-on-k8s.md
+++ b/content/post/2023-03-25-vault-on-k8s.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title:       "Vault on Kubernetes"
 subtitle:    "Install Vault on K8S with integrated storage via Helm"
 description: "To setup a HA Vault Cluster in Kubernetes"
