--- a/content/post/2023-05-29-k8s-cka.md
+++ b/content/post/2023-05-29-k8s-cka.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title:       "CKA & important operation commands"
 subtitle:    "Passed CKA exam last Sat, would like to summarize the useful commands for future reference."
 description: ""
