--- a/content/post/2025-12-08-langchain-1.x-architecture.md
+++ b/content/post/2025-12-08-langchain-1.x-architecture.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 title: "LangChain 1.x Architecture Guide for Tech Leads and Solution Architects"
 date: "2025-12-08"
 author: "Jamie Zhang"
